<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">快递在哪儿</string>
    <string name="open_cainiao">打开菜鸟身份码</string>
    <string name="open_pinduoduo">打开拼多多身份码</string>
    <string name="open_taobao">打开淘宝身份码</string>
    <string name="shortcut_cainiao">菜鸟身份码</string>
    <string name="shortcut_pinduoduo">拼多多身份码</string>
    <string name="shortcut_pinduoduo_pending">拼多多待取快递</string>
    <string name="shortcut_taobao">淘宝身份码</string>
    <string name="shortcut_taobao_pending">淘宝待取快递</string>
    <string name="widget_cainiao">菜鸟</string>
    <string name="widget_description">菜鸟、淘宝和拼多多取件入口</string>
    <string name="widget_pinduoduo">拼多多</string>
    <string name="widget_taobao">淘宝</string>
</resources>
